# OverseerrRequestViaTelegramBot

./: .env.template  .gitignore  AUTOMATIC-VERSION-BUILD.md  CHANGELOG.md  DOCKER-HUB-DEPLOY.md  DOCKER.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  VERSION-MANAGEMENT.md  bot.py  bot_config.py.template  bump-version.bat  bump-version.sh  debug_api.py  docker-build.bat  docker-build.sh  docker-compose.yml  migrate.py  pyproject.toml  quick-docker.bat  quick-docker.sh  requirements.txt  telegram_overseerr_bot.py  verify-docker-hub.sh
.github/: WORKFLOW.md
.github/workflows/: auto-version.yml  docker-build.yml  manual-version.yml
api/: overseerr_api.py  request_manager.py
config/: config_manager.py  constants.py
docker/: .dockerignore  Dockerfile  Dockerfile.health  build-bug-fix-release.sh  docker-compose.yml  quick-docker.sh
docs/: FEATURES.md
handlers/: admin_handlers.py  callback_handlers.py  command_handlers.py  text_handlers.py  ui_handlers.py
notifications/: __init__.py  admin_notifications.py  notification_manager.py  status_monitor.py  webhook_handler.py
session/: __init__.py  session_manager.py
tests/: README.md  __init__.py  test_admin_approval.py  test_api.py  test_handlers.py  test_health_check.py  test_integration_request_more.py  test_request_more_seasons.py  test_setup.py  test_webhook_admin_integration.py
utils/: __init__.py  error_handler.py  health_check.py  telegram_utils.py  user_loader.py  version.py
