[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overseerr-telegram-bot"
version = "4.2.0"
description = "A Telegram bot for interacting with Overseerr media requests"
readme = "README.md"
authors = [
    {name = "hasan-sayfi", email = "99361971+hasan-sayfi@users.noreply.github.com"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-telegram-bot",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/hasan-sayfi/OverseerrRequestViaTelegramBot"
Repository = "https://github.com/hasan-sayfi/OverseerrRequestViaTelegramBot"
Issues = "https://github.com/hasan-sayfi/OverseerrRequestViaTelegramBot/issues"

[tool.bumpversion]
current_version = "4.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
